[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "code-debug-env"
version = "1.0.0"
description = "OpenEnv environment for code debugging and bug fixing"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "pydantic==2.7.1",
    "pyyaml==6.0.1",
    "openai==1.30.1",
    "requests==2.32.2",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[tool.setuptools.packages.find]
where = ["."]
